[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.49.0",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sift-stack-py>=0.9.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
]
